Разработан алгоритм создения разных списков для автомата Autoit

--- a/TestAutoit/Form/FormSpisok/Style/ResourceStyle.xaml
+++ b/TestAutoit/Form/FormSpisok/Style/ResourceStyle.xaml
@@ -10,4 +10,16 @@
         <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Shadows.xaml" />
         <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.ToggleButton.xaml" />
     </ResourceDictionary.MergedDictionaries>
+    <ControlTemplate x:Key="ValidationFailederror">
+        <StackPanel Orientation="Horizontal">
+            <Border BorderBrush="Red" BorderThickness="3">
+                <AdornedElementPlaceholder />
+            </Border>
+            <TextBlock
+                    FontSize="20"
+                    FontWeight="Bold"
+                    Foreground="Red"
+                    Text="!" />
+        </StackPanel>
+    </ControlTemplate>
 </ResourceDictionary>
