--- a/TestAutoit/Form/FormSpisok/WpfForm/FormSpisok.xaml
+++ b/TestAutoit/Form/FormSpisok/WpfForm/FormSpisok.xaml
@@ -28,6 +28,7 @@
             <ColumnDefinition Width="Auto" />
             <ColumnDefinition Width="Auto" />
             <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="100*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -51,7 +52,9 @@
                                 Width="16"
                                 Height="16"
                                 Source="{Binding TextBoxFileModel.Icon, Converter={StaticResource ConverteImage}}" />
-                            <TextBox IsEnabled="False" Text="{Binding TextBoxFileModel.Name}" />
+                            <TextBox IsEnabled="False" Text="{Binding TextBoxFileModel.Name, ValidatesOnDataErrors=True}"
+                                     ToolTip="{Binding RelativeSource={x:Static RelativeSource.Self}, Path=(Validation.Errors)[0].ErrorContent}"
+                                     Validation.ErrorTemplate="{StaticResource ValidationFailederror}"/>
                         </WrapPanel>
                     </ControlTemplate>
                 </TextBox.Template>
@@ -63,11 +66,14 @@
             Margin="5,5,5,5">
             <CheckBox
                 Content="Выбрать заголовок!!!"
-                IsChecked="False"
+                IsChecked="{Binding CheckBoxModel.IsCheced}"
                 ToolTip="Участвует ли 1 строка в списке или нет!!!" />
             <WrapPanel>
                 <Label Content="Выбрать Лист: " />
-                <ComboBox ItemsSource="{Binding ModelSnuOne.ShemeFull}" SelectedItem="{Binding ModelSnuOne.SelectList}">
+                <ComboBox ItemsSource="{Binding ModelSnuOne.ShemeFull}" 
+                          SelectedItem="{Binding ModelSnuOne.SelectList, ValidatesOnDataErrors=True}"
+                          ToolTip="{Binding RelativeSource={x:Static RelativeSource.Self}, Path=(Validation.Errors)[0].ErrorContent}"
+                          Validation.ErrorTemplate="{StaticResource ValidationFailederror}">
                     <ComboBox.ItemTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
@@ -79,7 +85,10 @@
             </WrapPanel>
             <WrapPanel>
                 <Label Content="Выбрать Букву: " />
-                <ComboBox ItemsSource="{Binding ModelSnuOne.ShemeColumn}">
+                <ComboBox ItemsSource="{Binding ModelSnuOne.SelectList.Columns}"
+                         SelectedItem="{Binding ModelSnuOne.SelectColumnLetter, ValidatesOnDataErrors=True}"
+                         ToolTip="{Binding RelativeSource={x:Static RelativeSource.Self}, Path=(Validation.Errors)[0].ErrorContent}"
+                         Validation.ErrorTemplate="{StaticResource ValidationFailederror}" >
                     <ComboBox.ItemTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
@@ -103,11 +112,19 @@
             Margin="5,5,5,5"
             HorizontalAlignment="Left"
             VerticalAlignment="Bottom"
+            Command="{Binding FormirovanieXml}"
             Content="Сформировать список" />
-        <ComboBox
-            Grid.Row="0"
-            Grid.Column="2"
+        <WrapPanel Grid.Column="2" Grid.Row="0">
+            <Label Content="Выбор схемы!!!"></Label>
+            <ComboBox
             Width="100"
             Margin="5,5,5,5" />
+        </WrapPanel>
+        <RichTextBox Grid.Column="3" 
+                     Grid.Row="0" 
+                     Grid.RowSpan="4" 
+                     VerticalAlignment="Stretch"  
+                     HorizontalAlignment="Stretch">
+        </RichTextBox>
     </Grid>
 </UserControl>
