--- a/TestAutoit/Form/FormSpisok/ColectionUserControl/TestUserControl.xaml
+++ b/TestAutoit/Form/FormSpisok/ColectionUserControl/TestUserControl.xaml
@@ -1,26 +1,19 @@
-﻿<UserControl
-    x:Class="TestAutoit.Form.FormSpisok.WpfForm.FormSpisok"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:converter="clr-namespace:ViewModelLib.Converter.ConvetrorImage;assembly=ViewModelLib"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:datacontext="clr-namespace:TestAutoit.Form.FormSpisok.Datacontext"
-    xmlns:local="clr-namespace:TestAutoit.Form.FormSpisok.WpfForm"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    HorizontalAlignment="Stretch"
-    VerticalAlignment="Stretch"
-    d:DesignHeight="300"
-    d:DesignWidth="700"
-    TextElement.FontSize="14"
-    TextElement.FontWeight="Black"
-    TextElement.Foreground="{DynamicResource MaterialDesignBody}"
-    mc:Ignorable="d">
+﻿<UserControl x:Class="TestAutoit.Form.FormSpisok.ColectionUserControl.TestUserControl"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:local="clr-namespace:TestAutoit.Form.FormSpisok.ColectionUserControl"
+             xmlns:convetrorImage="clr-namespace:ViewModelLib.Converter.ConvetrorImage;assembly=ViewModelLib"
+             xmlns:datacontext="clr-namespace:TestAutoit.Form.FormSpisok.Datacontext"
+             mc:Ignorable="d" 
+             d:DesignHeight="700" d:DesignWidth="700">
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="../Style/ResourceStyle.xaml" />
             </ResourceDictionary.MergedDictionaries>
-            <converter:ConvertorImage x:Key="ConverteImage" />
+            <convetrorImage:ConvertorImage x:Key="ConverteImage" />
         </ResourceDictionary>
     </UserControl.Resources>
     <Grid>
@@ -118,25 +111,5 @@
             VerticalAlignment="Bottom"
             Command="{Binding FormirovanieXml}"
             Content="Сформировать список" />
-        <DockPanel Grid.Row="0" Grid.Column="2" Grid.ColumnSpan="2" Grid.RowSpan="4" Margin="20,5,5,5" >
-        <WrapPanel DockPanel.Dock="Top" >
-            <Label Content="Выбор схемы!!!" />
-            <ComboBox
-                MinWidth="100"
-                Margin="5,5,5,5"
-                ItemsSource="{Binding ShemeDocument.ShemeFullDocument}"
-                SelectedItem="{Binding ShemeDocument.Shema}">
-                <ComboBox.ItemTemplate>
-                    <DataTemplate>
-                        <StackPanel Orientation="Horizontal">
-                            <TextBlock Text="{Binding Shemes}" />
-                        </StackPanel>
-                    </DataTemplate>
-                </ComboBox.ItemTemplate>
-            </ComboBox>
-        </WrapPanel>
-           <ContentControl Content="{Binding ShemeDocument.UserContr}" ></ContentControl> 
-           <FlowDocumentReader DockPanel.Dock="Bottom"  HorizontalAlignment="Left" VerticalAlignment="Stretch" Document="{Binding ShemeDocument.Shema.Document}"/>
-        </DockPanel>
     </Grid>
 </UserControl>
