--- a/TestAutoit/Form/FormSpisok/FormirovanieXml/SnuOneForm.xaml
+++ b/TestAutoit/Form/FormSpisok/FormirovanieXml/SnuOneForm.xaml
@@ -1,13 +1,15 @@
-﻿<UserControl x:Class="TestAutoit.Form.FormSpisok.ColectionUserControl.TestUserControl"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:TestAutoit.Form.FormSpisok.ColectionUserControl"
-             xmlns:convetrorImage="clr-namespace:ViewModelLib.Converter.ConvetrorImage;assembly=ViewModelLib"
-             xmlns:datacontext="clr-namespace:TestAutoit.Form.FormSpisok.Datacontext"
-             mc:Ignorable="d" 
-             d:DesignHeight="700" d:DesignWidth="700">
+﻿<UserControl
+    x:Class="TestAutoit.Form.FormSpisok.FormirovanieXml.SnuOneForm"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:convetrorImage="clr-namespace:ViewModelLib.Converter.ConvetrorImage;assembly=ViewModelLib"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:datacontext="clr-namespace:TestAutoit.Form.FormSpisok.Datacontext"
+    xmlns:local="clr-namespace:TestAutoit.Form.FormSpisok.FormirovanieXml"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    d:DesignHeight="300"
+    d:DesignWidth="300"
+    mc:Ignorable="d">
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -30,7 +32,7 @@
             <RowDefinition Height="100*" />
         </Grid.RowDefinitions>
         <Grid.DataContext>
-            <datacontext:DataContextDate />
+            <datacontext:DataPageSheme />
         </Grid.DataContext>
         <WrapPanel Grid.Row="1" Grid.Column="0">
             <Label Margin="5,5,0,5" Content="Выбранный файл: " />
@@ -101,7 +103,6 @@
             Grid.Column="1"
             Margin="5,5,5,5">
             <Button Command="{Binding SelectFile}" Content="Выбрать файл XSLS" />
-            <ListView />
         </StackPanel>
         <Button
             Grid.Row="3"
