--- a/TestAutoit/Form/FormSpisok/Style/ResourceStyle.xaml
+++ b/TestAutoit/Form/FormSpisok/Style/ResourceStyle.xaml
@@ -1,7 +1,5 @@
-﻿<ResourceDictionary
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <ResourceDictionary.MergedDictionaries >
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Light.xaml" />
         <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Defaults.xaml" />
         <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Primary/MaterialDesignColor.Green.xaml" />
@@ -16,10 +14,10 @@
                 <AdornedElementPlaceholder />
             </Border>
             <TextBlock
-                    FontSize="20"
-                    FontWeight="Bold"
-                    Foreground="Red"
-                    Text="!" />
+                FontSize="20"
+                FontWeight="Bold"
+                Foreground="Red"
+                Text="!" />
         </StackPanel>
     </ControlTemplate>
 </ResourceDictionary>
