--- a/TestAutoit/Form/FormSpisok/WpfForm/FormSpisok.xaml
+++ b/TestAutoit/Form/FormSpisok/WpfForm/FormSpisok.xaml
@@ -39,104 +39,37 @@
         <Grid.DataContext>
             <datacontext:DataContextDate />
         </Grid.DataContext>
-        <WrapPanel Grid.Row="1" Grid.Column="0">
-            <Label Margin="5,5,0,5" Content="Выбранный файл: " />
-            <TextBox
-                Margin="5,5,5,5"
-                HorizontalContentAlignment="Stretch"
-                VerticalContentAlignment="Stretch">
-                <TextBox.Template>
-                    <ControlTemplate>
-                        <WrapPanel Background="Transparent">
-                            <Image
-                                Width="16"
-                                Height="16"
-                                Source="{Binding TextBoxFileModel.Icon, Converter={StaticResource ConverteImage}}" />
-                            <TextBox
-                                IsEnabled="False"
-                                Text="{Binding TextBoxFileModel.Name, ValidatesOnDataErrors=True}"
-                                ToolTip="{Binding RelativeSource={x:Static RelativeSource.Self}, Path=(Validation.Errors)[0].ErrorContent}"
-                                Validation.ErrorTemplate="{StaticResource ValidationFailederror}" />
-                        </WrapPanel>
-                    </ControlTemplate>
-                </TextBox.Template>
-            </TextBox>
-        </WrapPanel>
-        <StackPanel
-            Grid.Row="2"
+        <DockPanel
+            Grid.Row="0"
+            Grid.RowSpan="4"
             Grid.Column="0"
-            Margin="5,5,5,5">
-            <CheckBox
-                Content="Выбрать заголовок!!!"
-                IsChecked="{Binding CheckBoxModel.IsCheced}"
-                ToolTip="Участвует ли 1 строка в списке или нет!!!" />
-            <WrapPanel>
-                <Label Content="Выбрать Лист: " />
+            Grid.ColumnSpan="2"
+            Margin="20,5,5,5">
+            <WrapPanel DockPanel.Dock="Top">
+                <Label Content="Выбор схемы!!!" />
                 <ComboBox
-                    ItemsSource="{Binding ModelSnuOne.ShemeFull}"
-                    SelectedItem="{Binding ModelSnuOne.SelectList, ValidatesOnDataErrors=True}"
-                    ToolTip="{Binding RelativeSource={x:Static RelativeSource.Self}, Path=(Validation.Errors)[0].ErrorContent}"
-                    Validation.ErrorTemplate="{StaticResource ValidationFailederror}">
+                    MinWidth="100"
+                    Margin="5,5,5,5"
+                    ItemsSource="{Binding ShemeDocument.ShemeFullDocument}"
+                    SelectedItem="{Binding ShemeDocument.Shema}">
                     <ComboBox.ItemTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
-                                <TextBlock Text="{Binding Listletter}" />
+                                <TextBlock Text="{Binding Shemes}" />
                             </StackPanel>
                         </DataTemplate>
                     </ComboBox.ItemTemplate>
                 </ComboBox>
             </WrapPanel>
-            <WrapPanel>
-                <Label Content="Выбрать Букву: " />
-                <ComboBox
-                    ItemsSource="{Binding ModelSnuOne.SelectList.Columns}"
-                    SelectedItem="{Binding ModelSnuOne.SelectColumnLetter, ValidatesOnDataErrors=True}"
-                    ToolTip="{Binding RelativeSource={x:Static RelativeSource.Self}, Path=(Validation.Errors)[0].ErrorContent}"
-                    Validation.ErrorTemplate="{StaticResource ValidationFailederror}">
-                    <ComboBox.ItemTemplate>
-                        <DataTemplate>
-                            <StackPanel Orientation="Horizontal">
-                                <TextBlock Text="{Binding ColumnName}" />
-                            </StackPanel>
-                        </DataTemplate>
-                    </ComboBox.ItemTemplate>
-                </ComboBox>
-            </WrapPanel>
-        </StackPanel>
-        <StackPanel
-            Grid.Row="1"
-            Grid.Column="1"
-            Margin="5,5,5,5">
-            <Button Command="{Binding SelectFile}" Content="Выбрать файл XSLS" />
-            <ListView />
-        </StackPanel>
-        <Button
-            Grid.Row="3"
-            Grid.Column="0"
-            Margin="5,5,5,5"
-            HorizontalAlignment="Left"
-            VerticalAlignment="Bottom"
-            Command="{Binding FormirovanieXml}"
-            Content="Сформировать список" />
-        <DockPanel Grid.Row="0" Grid.Column="2" Grid.ColumnSpan="2" Grid.RowSpan="4" Margin="20,5,5,5" >
-        <WrapPanel DockPanel.Dock="Top" >
-            <Label Content="Выбор схемы!!!" />
-            <ComboBox
-                MinWidth="100"
-                Margin="5,5,5,5"
-                ItemsSource="{Binding ShemeDocument.ShemeFullDocument}"
-                SelectedItem="{Binding ShemeDocument.Shema}">
-                <ComboBox.ItemTemplate>
-                    <DataTemplate>
-                        <StackPanel Orientation="Horizontal">
-                            <TextBlock Text="{Binding Shemes}" />
-                        </StackPanel>
-                    </DataTemplate>
-                </ComboBox.ItemTemplate>
-            </ComboBox>
-        </WrapPanel>
-           <ContentControl Content="{Binding ShemeDocument.UserContr}" ></ContentControl> 
-           <FlowDocumentReader DockPanel.Dock="Bottom"  HorizontalAlignment="Left" VerticalAlignment="Stretch" Document="{Binding ShemeDocument.Shema.Document}"/>
+            <FlowDocumentReader
+                HorizontalAlignment="Left"
+                VerticalAlignment="Stretch"
+                DockPanel.Dock="Bottom"
+                Document="{Binding ShemeDocument.Shema.Document}" />
         </DockPanel>
+        <UserControl
+            Grid.Row="0"
+            Grid.Column="2"
+            Content="{Binding ShemeDocument.Shema.UserContr}" />
     </Grid>
 </UserControl>
