--- a/TestAutoit/Form/FormSpisok/WpfForm/FormSpisok.xaml
+++ b/TestAutoit/Form/FormSpisok/WpfForm/FormSpisok.xaml
@@ -13,7 +13,6 @@
     d:DesignWidth="700"
     TextElement.FontSize="14"
     TextElement.FontWeight="Black"
-    TextElement.Foreground="{DynamicResource MaterialDesignBody}"
     mc:Ignorable="d">
     <UserControl.Resources>
         <ResourceDictionary>
@@ -23,7 +22,7 @@
             <converter:ConvertorImage x:Key="ConverteImage" />
         </ResourceDictionary>
     </UserControl.Resources>
-    <Grid>
+    <Grid d:DataContext="{d:DesignInstance {x:Type datacontext:DataContextDate}}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" />
             <ColumnDefinition Width="Auto" />
@@ -36,9 +35,6 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="100*" />
         </Grid.RowDefinitions>
-        <Grid.DataContext>
-            <datacontext:DataContextDate />
-        </Grid.DataContext>
         <DockPanel
             Grid.Row="0"
             Grid.RowSpan="4"
@@ -51,7 +47,9 @@
                     MinWidth="100"
                     Margin="5,5,5,5"
                     ItemsSource="{Binding ShemeDocument.ShemeFullDocument}"
-                    SelectedItem="{Binding ShemeDocument.Shema}">
+                    SelectedItem="{Binding ShemeDocument.Shema, ValidatesOnDataErrors=True}"
+                    ToolTip="{Binding RelativeSource={x:Static RelativeSource.Self}, Path=(Validation.Errors)[0].ErrorContent}"
+                    Validation.ErrorTemplate="{StaticResource ValidationFailederror}">
                     <ComboBox.ItemTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
@@ -70,6 +68,8 @@
         <UserControl
             Grid.Row="0"
             Grid.Column="2"
+            Grid.RowSpan="3"
             Content="{Binding ShemeDocument.Shema.UserContr}" />
+        <UserControl Grid.Column="2" Grid.Row="3" Content="{Binding Spisok}"></UserControl>
     </Grid>
 </UserControl>
