--- a/TestAutoit/Form/FormSpisok/FormirovanieXml/SnuOneForm.xaml
+++ b/TestAutoit/Form/FormSpisok/FormirovanieXml/SnuOneForm.xaml
@@ -45,9 +45,8 @@
                                 Height="16"
                                 Source="{Binding TextBoxFileModel.Icon, Converter={StaticResource ConverteImage}}" />
                             <TextBox
-                                
-                                IsReadOnly="True"
                                 MinWidth="50"
+                                IsReadOnly="True"
                                 Text="{Binding TextBoxFileModel.Name, ValidatesOnDataErrors=True}"
                                 ToolTip="{Binding RelativeSource={x:Static RelativeSource.Self}, Path=(Validation.Errors)[0].ErrorContent}"
                                 Validation.ErrorTemplate="{StaticResource ValidationFailederror}" />
@@ -90,7 +89,7 @@
                     <ComboBox.ItemTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
-                                <TextBlock Text="{Binding ColumnName}" />
+                                <TextBlock Text="{Binding ColumnCellValueName}" />
                             </StackPanel>
                         </DataTemplate>
                     </ComboBox.ItemTemplate>
