--- a/TestAutoit/Form/FormSpisok/WpfForm/Spisok/ButtonFormirovanie.xaml
+++ b/TestAutoit/Form/FormSpisok/WpfForm/Spisok/ButtonFormirovanie.xaml
@@ -1,13 +1,15 @@
-﻿<UserControl x:Class="TestAutoit.Form.FormSpisok.WpfForm.Spisok.ButtonFormirovanie"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:TestAutoit.Form.FormSpisok.WpfForm.Spisok"
-             xmlns:convetrorImage="clr-namespace:ViewModelLib.Converter.ConvetrorImage;assembly=ViewModelLib"
-             xmlns:datacontext="clr-namespace:TestAutoit.Form.FormSpisok.Datacontext"
-             mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+﻿<UserControl
+    x:Class="TestAutoit.Form.FormSpisok.WpfForm.Spisok.ButtonFormirovanie"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:convetrorImage="clr-namespace:ViewModelLib.Converter.ConvetrorImage;assembly=ViewModelLib"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:datacontext="clr-namespace:TestAutoit.Form.FormSpisok.Datacontext"
+    xmlns:local="clr-namespace:TestAutoit.Form.FormSpisok.WpfForm.Spisok"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    d:DesignHeight="300"
+    d:DesignWidth="300"
+    mc:Ignorable="d">
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -22,18 +24,45 @@
             <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
         <Button
-            Margin="5,5,5,5"
             Grid.Column="0"
+            Margin="5,5,5,5"
             HorizontalAlignment="Left"
             VerticalAlignment="Top"
             Command="{Binding FormirovanieXml}"
             Content="Сформировать список" />
-        <ListView 
+        <ListView
+            x:Name="ListView"
             Grid.Column="1"
-            VerticalAlignment="Top" 
+            Margin="5,5,5,5"
             HorizontalAlignment="Right"
-            Margin="5,5,5,5">
-            
+            VerticalAlignment="Top"
+            ItemsSource="{Binding XmlFile.XmlFiles}"
+            SelectedItem="{Binding XmlFile.File}">
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn Header="Сформированые списки">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <StackPanel
+                                    HorizontalAlignment="Stretch"
+                                    Orientation="Horizontal"
+                                    Tag="{Binding ElementName=ListView, Path=DataContext}">
+                                    <Image
+                                        Width="16"
+                                        Height="16"
+                                        Source="{Binding Icon, Converter={StaticResource ConverteImage}}" />
+                                    <TextBlock HorizontalAlignment="Stretch" Text="{Binding Name}" />
+                                    <StackPanel.ContextMenu>
+                                        <ContextMenu>
+                                            <MenuItem Command="{Binding PlacementTarget.Tag.Transfer, RelativeSource={RelativeSource AncestorType=ContextMenu}}" Header="Перенести на отработку!!!" />
+                                        </ContextMenu>
+                                    </StackPanel.ContextMenu>
+                                </StackPanel>
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
+                </GridView>
+            </ListView.View>
         </ListView>
     </Grid>
 </UserControl>
