--- a/AutomatAis3Full/Form/Report/ReportXml/ReportForm/Report.xaml
+++ b/AutomatAis3Full/Form/Report/ReportXml/ReportForm/Report.xaml
@@ -29,6 +29,7 @@
                 <ListView
                     x:Name="ListView"
                     Margin="5,5,5,5"
+                    Height="150"
                     ItemsSource="{Binding ReportJurnalAndFile.XmlFileZnach}"
                     SelectedItem="{Binding ReportJurnalAndFile.XmlFile}">
                     <ListView.View>
@@ -57,6 +58,7 @@
                 <ListView
                     x:Name="ListView1"
                     Margin="5,5,5,5"
+                    Height="150"
                     ItemsSource="{Binding ReportJurnalAndFile.XmlReportJurnal}"
                     SelectedItem="{Binding ReportJurnalAndFile.XmlFile}">
                     <ListView.View>
@@ -86,6 +88,7 @@
                 <ListView
                     Name="ListView2"
                     Margin="5,5,5,5"
+                    Height="150"
                     ItemsSource="{Binding Report.ReportXlsxel}"
                     SelectedItem="{Binding Report.Xlsx}">
                     <ListView.View>
