Создан сайт под ядро ASP а модули под Angular работающий с REST CROSS из другого проекта.

--- a/SyteIfns/Views/Mergin/FaceMergin.cshtml
+++ b/SyteIfns/Views/Mergin/FaceMergin.cshtml
@@ -1,28 +1,33 @@
-﻿@model SyteIfns.Models.PostRestAplication.ModelFaceError.ReaderAnsvwer
+﻿@*@model SyteIfns.Models.PostRestAplication.ModelFaceError.ReaderAnsvwer*@
 @{
     ViewBag.Tiile = "FaceMergin";
 }
 <script language="javascript" type="text/javascript" src="~/Scripts/MyTestScript.js"></script>
 <div class="merginreport">
-<h1>Добавление лица на слияние!!!</h1>
- @using (Html.BeginForm("AddFace", "Mergin"))
-{
+    <my-app>Загрузка блока...</my-app>
+    <script src="~/public/polyfills.js"></script>
+    <script src="~/public/app.js"></script>
+
+    @*<h1>Добавление лица на слияние!!!</h1>
+    @using (Html.BeginForm("AddFace", "Mergin"))
+    {
         <div class="add">
-                <div class="old">
-                    <label>Старое лицо:</label>
-                    <input id="N1Old" name="nold" type="number"/><br/>
-                </div>
-                <div class="new">
-                    <label>Новое лицо:</label>
-                    <input id="N1New" name="nnew" type="number"/><br/>
-                </div>
-                <input type="submit" value="Отправить"/>
+            <div class="old">
+                <label>Старое лицо:</label>
+                <input id="N1Old" name="nold" type="number"/><br/>
+            </div>
+            <div class="new">
+                <label>Новое лицо:</label>
+                <input id="N1New" name="nnew" type="number"/><br/>
+            </div>
+            <input type="submit" value="Отправить"/>
         </div>
-}
-    <p>@Model.AddFace</p>
-    <p>Отчет по слиянию лиц!!!</p>
-    <table>
+    }*@
+    @*<p>@Model.AddFace</p>*@
+    @*<p>Отчет по слиянию лиц!!!</p>*@
+    @*<table>
         <tr>
+            <th>Порядковый номер</th>
             <th>Старое лицо</th>
             <th>Новое лицо</th>
             <th>Сообщение</th>
@@ -31,12 +36,13 @@
             <th>ИНН</th>
             <th>КПП</th>
             <th>ФИД</th>
-        </tr>
-        @if (@Model.Face != null)
+        </tr>*@
+        @*@if (@Model.Face != null)
         {
             foreach (var face in @Model.Face.FaceError)
             {
                 <tr>
+                    <th>@face.Id</th>
                     <th>@face.N1old</th>
                     <th>@face.N1new</th>
                     <th>@face.Messagee</th>
@@ -45,8 +51,18 @@
                     <th>@face.FN212.N134</th>
                     <th>@face.FN212.D3</th>
                     <th>@face.FN212.FID_Entity</th>
+                    @*<th>@using (Html.BeginForm("DeleteFace", "Mergin"))
+                    {
+                        <input name="id" type="hidden" value=@face.Id>
+                        <input type="submit" value="Удалить" />
+                    }*@
+                    @*</th>*@
+                   @* <th>
+
+                    </th>
                 </tr>
             }
         }
-    </table>
+    </table>*@
+    
 </div>
