Добился стабильности Angulr переделал структуру на более понятную. Пока не ясно ка подключить 2 root Module надо искать действующее решение работает но на странице не найден корневой элемент.

--- a/SyteIfns/Views/Shared/_Layout.cshtml
+++ b/SyteIfns/Views/Shared/_Layout.cshtml
@@ -37,17 +37,7 @@
                         <ul>
                             <li>
                                 <div>
-                                    <p>@Html.ActionLink("Контакт", "Contact", "Home")</p>
-                                </div>
-                            </li>
-                            <li>
-                                <div>
-                                    <p>@Html.ActionLink("О программе", "About", "Home")</p>
-                                </div>
-                            </li>
-                            <li>
-                                <div>
-                                    <p>@Html.ActionLink("Домашняя страница", "Index", "Home")</p>
+                                    <p>@Html.ActionLink("Требования!!!", "Trebovanie", "Otdel")</p>
                                 </div>
                             </li>
                         </ul>
@@ -62,7 +52,7 @@
                         <ul>
                             <li>
                                 <div>
-                                    <p>@Html.ActionLink("Отчет слияния лиц!!!", "FaceMergin", "Mergin")</p>
+                                    <p>@Html.ActionLink("Отчет слияния лиц!!!", "MergeFace", "Otdel")</p>
                                 </div>
                             </li>
                         </ul>
