Добавленны функции на сайт отработки Решений и Инкассов

--- a/SyteIfns/Views/Shared/_Layout.cshtml
+++ b/SyteIfns/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
                         <ul>
                             <li>
                                 <div>
-                                    <p>@Html.ActionLink("Требования!!!", "Trebovanie", "Otdel")</p>
+                                    <p>@Html.ActionLink("Решения!!!", "Reshenie", "Otdel")</p>
                                 </div>
                             </li>
                         </ul>
