--- a/SyteIfns/Views/Otdel/Yregulirovanie/Reshenie.cshtml
+++ b/SyteIfns/Views/Otdel/Yregulirovanie/Reshenie.cshtml
@@ -5,6 +5,7 @@
 
 </body>
 <h1>@ViewBag.Message</h1>
+<p align="right">@Html.ActionLink("Скачать файл выборки Требований!!!", "DonloadFile", "Otdel")</p>
 <my-treb>Загрузка блока...</my-treb>
 <script src="~/public/polyfills.js"></script>
 <script src="~/public/app.js"></script>
